syntax = "proto3";
package com.vang;
option java_package = "com.vang.forgot_password_service.grpc.generated";
option java_multiple_files = true;
option java_outer_classname = "ForgotPasswordClient";

service CheckMailForgotPassword {
  rpc checkForgot(CheckMailForgotPasswordRequest) returns (CheckMailForgotPasswordReply);
}

message CheckMailForgotPasswordRequest {
  string email = 1;
}

message CheckMailForgotPasswordReply {
  bool status = 1;
}